Criacao das factories, seeders e alteracao na documentacao
