# openapi.yml
@@ -1,56 +1,71 @@
-openapi: '3.0.2'
+openapi: "3.0.2"
 info:
   title: DNDApi
   description: "Nossa API de armas de D&D fornece informações sobre as várias armas que podem ser encontradas no sistema de RPG de mesa: Dungeons & Dragons. Ela inclui detalhes como nome da arma, alcance, quantidade de dano e tipo de dano causado, além das propriedades presentes na mesma."
-  version: '1.0'
+  version: "1.0"
 servers:
-  - url: https://api.server.test/api
+  - url: http://127.0.0.1:8000
 paths:
   /api:
     get:
       description: Lista todas as rotas da API.
       responses:
-        '200':
+        "200":
           description: Rotas listadas com sucesso.
           content:
   /api/armas:
     get:
       description: Lista todas as armas.
       responses:
-        '200':
+        "200":
           description: Armas listadas com sucesso.
           content:
     post:
       description: Cria uma nova arma.
+      requestBody:
+        required: true
+        content:
+          aplication/json:
+            schema:
+              type: object
+              properties:
+                index:
+                  $ref: ''
+                nome:
+                alcance:
+                dano:
+                tipo_de_dano:
+                propriedade:
+
       responses:
-        '201':
+        "201":
           description: Arma criada com sucesso.
-        '400':
+        "400":
           description: Erro de validação, falta algum parâmetro na requisição.
-        '403':
+        "403":
           description: Erro de autenticação, token inválido ou sem permissão necessária.
   /api/armas/{index}:
     get:
       description: Lista uma arma específica.
       responses:
-        '200':
+        "200":
           description: Arma listada com sucesso.
           content:
     put:
       description: Atualiza uma arma específica.
       responses:
-        '200':
+        "200":
           description: Atualização realizada com sucesso.
-        '400':
+        "400":
           description: Erro de validação, falta algum parâmetro na requisição.
-        '403':
+        "403":
           description: Erro de autenticação, token inválido ou sem permissão necessária.
     delete:
       description: Deleta uma arma específica.
       responses:
-        '200':
+        "200":
           description: Arma deletada com sucesso.
-        '403':
+        "403":
           description: Erro de autenticação, token inválido ou sem permissão necessária.
-        '404':
+        "404":
           description: Arma não encontrada ou inexistente.
